--- a/app/src/main/res/layout/activity_bookkeeping_constraintlayout.xml
+++ b/app/src/main/res/layout/activity_bookkeeping_constraintlayout.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.75"/>
+        app:layout_constraintGuide_percent="0.73" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
@@ -173,10 +173,15 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/bg_edittext"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textColor="@color/buttonMedium"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toTopOf="@+id/guideline9" />
+        app:layout_constraintTop_toTopOf="@+id/guideline9"
+        tools:text="2022/12/19" />
 
     <TextView
         android:id="@+id/textView7"
@@ -186,10 +191,15 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/bg_edittext"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textColor="@color/buttonMedium"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toTopOf="@+id/guideline9" />
+        app:layout_constraintTop_toTopOf="@+id/guideline9"
+        tools:text="12 PM" />
 
     <EditText
         android:id="@+id/editText2"
